<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/fondo_splash">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/logo_hospitalk" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/logo"
        android:layout_marginTop="@dimen/margin_splash"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/primero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_header"
            android:text="@string/sp_1"/>

        <TextView
            android:id="@+id/segundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_header"
            android:text="@string/sp_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/tercero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blanco"
        android:textSize="@dimen/text_size_header"
        android:text="@string/sp_3" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@id/tercero"
        android:layout_width="180dp"
        android:layout_height="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_splash"
        android:progressDrawable="@drawable/background_progress_bar"
        style="?android:attr/progressBarStyleHorizontal" />

    <TextView
        android:id="@+id/cargando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_header"
        android:text="@string/sp_4" />

</RelativeLayout>
